feat: ACL Java Plugin now ask MaskQL API for user permissions and masks