@@ -1,6 +1,7 @@
 package com.maskql.acl;
 
 import com.maskql.acl.policy.HardcodedPolicyStore;
+import com.maskql.acl.AclAPI;
 
 import io.trino.spi.connector.CatalogSchemaTableName;
 import io.trino.spi.connector.ColumnSchema;
@@ -16,89 +17,169 @@ import io.trino.spi.QueryId;
 import java.security.Principal;
 import java.util.*;
 
+import java.net.URI;
+import java.net.URLEncoder;
+import java.net.http.*;
+import java.nio.charset.StandardCharsets;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+
 public class MaskqlSystemAccessControl implements SystemAccessControl {
 
     private final HardcodedPolicyStore policy = new HardcodedPolicyStore();
+    private final AclAPI aclApi = new AclAPI();
+    private static final String BASE_URL = "http://maskql:8081";
+    private static final HttpClient CLIENT = HttpClient.newHttpClient();
+    private static final ObjectMapper MAPPER = new ObjectMapper();
 
     @Override
     public Set<String> filterCatalogs(SystemSecurityContext context, Set<String> catalogs) {
         String user = context.getIdentity().getUser();
-        return policy.filterCatalogs(user, catalogs);
+        try {
+            List<String> allowed = aclApi.catalogs(user, catalogs);
+            return new HashSet<>(allowed);
+        } catch (Exception e) {
+            System.err.println("[MaskQL ACL] filterCatalogs error: " + e.getClass().getName() + ": " + e.getMessage());
+            // return catalogs; // DEBUG -> Allow all
+            return Collections.emptySet();
+        }
     }
 
     @Override
     public Set<String> filterSchemas(SystemSecurityContext context, String catalogName, Set<String> schemaNames) {
         String user = context.getIdentity().getUser();
-        if (policy.isAdmin(user)) return schemaNames;
-        if (policy.hasRole(user, "ANALYST") && "test_db".equalsIgnoreCase(catalogName)) return schemaNames;
-        return Set.of();
+        try {
+            List<String> allowed = aclApi.schemas(user, catalogName, schemaNames);
+            return new LinkedHashSet<>(allowed);
+        } catch (Exception e) {
+            System.err.println("[MaskQL ACL] filterSchemas error: " + e.getClass().getName() + ": " + e.getMessage());
+            return Collections.emptySet();
+        }
     }
 
     @Override
     public Set<SchemaTableName> filterTables(SystemSecurityContext context, String catalogName, Set<SchemaTableName> tableNames) {
         String user = context.getIdentity().getUser();
-        if (policy.isAdmin(user)) return tableNames;
-        Set<SchemaTableName> out = new HashSet<>();
-        for (SchemaTableName t : tableNames) {
-            if (policy.canSelectTable(user, catalogName, t.getSchemaName(), t.getTableName())) out.add(t);
+        try {
+            // Group requested tables by schema because the API takes one schema per call
+            Map<String, List<String>> bySchema = new LinkedHashMap<>();
+            for (SchemaTableName t : tableNames) {
+                String schema = t.getSchemaName(); // can be null depending on connector; handle as key "null"
+                bySchema.computeIfAbsent(schema, k -> new ArrayList<>()).add(t.getTableName());
+            }
+
+            Set<SchemaTableName> out = new LinkedHashSet<>();
+            for (Map.Entry<String, List<String>> e : bySchema.entrySet()) {
+                String schema = e.getKey();
+                List<String> tables = e.getValue();
+                List<String> allowed = aclApi.tables(user, catalogName, schema, tables);
+                for (String tbl : allowed) {
+                    out.add(new SchemaTableName(schema, tbl));
+                }
+            }
+            return out;
+        } catch (Exception e) {
+            System.err.println("[MaskQL ACL] filterTables error: " + e.getClass().getName() + ": " + e.getMessage());
+            return Collections.emptySet();
         }
-        return out;
     }
 
     @Override
     public void checkCanSelectFromColumns(SystemSecurityContext context, CatalogSchemaTableName table, Set<String> columns) {
-        String user = context.getIdentity().getUser();
-        boolean ok = policy.canSelectTable(user,
-                table.getCatalogName(),
-                table.getSchemaTableName().getSchemaName(),
-                table.getSchemaTableName().getTableName());
-        if (!ok) {
-            throw new AccessDeniedException("Access Denied: Cannot select from table " + table);
+        String user    = context.getIdentity().getUser();
+        String catalog = table.getCatalogName();
+        String schema  = table.getSchemaTableName().getSchemaName(); // may be null
+        String tbl     = table.getSchemaTableName().getTableName();
+
+        try {
+            boolean ok = aclApi.isColumnsAllowed(user, catalog, tbl, schema, columns);
+            if (!ok) {
+                throw new AccessDeniedException("Access Denied: Cannot select from table " + table);
+            }
+        } catch (Exception e) {
+            System.err.println("[MaskQL ACL] checkCanSelectFromColumns error: " + e.getClass().getName() + ": " + e.getMessage());
+            throw new AccessDeniedException("Access Denied (policy API failure) for table " + table);
         }
     }
 
     @Override
     public List<ViewExpression> getRowFilters(SystemSecurityContext context, CatalogSchemaTableName table) {
-        String user = context.getIdentity().getUser();
-        Optional<String> filter = policy.rowFilterSql(
-                user,
-                table.getCatalogName(),
-                table.getSchemaTableName().getSchemaName(),
-                table.getSchemaTableName().getTableName()
-        );
-        if (filter.isEmpty()) return List.of();
-        return List.of(ViewExpression.builder().expression(filter.get()).build());
-    }
-
-    
-    @Override
-    public Map<ColumnSchema, ViewExpression> getColumnMasks(SystemSecurityContext context,
-                                                            CatalogSchemaTableName table,
-                                                            List<ColumnSchema> columns) {
-        String user = context.getIdentity().getUser();
+        String user    = context.getIdentity().getUser();
         String catalog = table.getCatalogName();
         String schema  = table.getSchemaTableName().getSchemaName();
         String tbl     = table.getSchemaTableName().getTableName();
 
+        try {
+            // API returns a list (could be strings or objects). AclAPI.rowFilters() returns List<Map<String,Object>>
+            List<Map<String, Object>> filters = aclApi.rowFilters(user, catalog, tbl, schema);
+            if (filters == null || filters.isEmpty()) {
+                return List.of();
+            }
+            List<ViewExpression> out = new ArrayList<>();
+            for (Object item : filters) {
+                // accept plain strings or maps with "expression"/"sql"
+                String expr = null;
+                if (item instanceof String) {
+                    expr = (String) item;
+                } else if (item instanceof Map) {
+                    Object v = ((Map<?, ?>) item).get("expression");
+                    if (v == null) v = ((Map<?, ?>) item).get("sql");
+                    if (v != null) expr = String.valueOf(v);
+                }
+                if (expr != null && !expr.isBlank()) {
+                    out.add(ViewExpression.builder().expression(expr).build());
+                }
+            }
+            return out;
+        } catch (Exception e) {
+            System.err.println("[MaskQL ACL] rowFilters error: " + e.getClass().getName() + ": " + e.getMessage());
+
+            List<ViewExpression> out = new ArrayList<>();
+            out.add(ViewExpression.builder().expression("false").build());
+            return out;
+        }
+    }
+
+    @Override
+    public Map<ColumnSchema, ViewExpression> getColumnMasks(SystemSecurityContext context,
+                                                            CatalogSchemaTableName table,
+                                                            List<ColumnSchema> columns) {
+        String user    = context.getIdentity().getUser();
+        String catalog = table.getCatalogName();
+        String schema  = table.getSchemaTableName().getSchemaName(); // can be null
+        String tbl     = table.getSchemaTableName().getTableName();
+
         Map<ColumnSchema, ViewExpression> out = new LinkedHashMap<>();
-        for (ColumnSchema col : columns) {
-            policy.columnMaskSql(user, catalog, schema, tbl, col.getName())
-                .ifPresent(sql -> out.put(col, ViewExpression.builder().expression(sql).build()));
+        try {
+            for (ColumnSchema col : columns) {
+                String colName = col.getName();
+                Optional<String> expr = aclApi.mask(user, catalog, tbl, colName, schema);
+                expr.ifPresent(sql ->
+                    out.put(col, ViewExpression.builder().expression(sql).build())
+                );
+            }
+        } catch (Exception e) {
+            System.err.println("[MaskQL ACL] getColumnMasks error: " + e.getClass().getName() + ": " + e.getMessage());
+            out.clear();
         }
         return out;
     }
 
     @Override
-    public void checkCanExecuteQuery(Identity identity, QueryId queryId) {
-        return; // All User can execute query
+    public boolean canAccessCatalog(SystemSecurityContext context, String catalogName) {
+        String user = context.getIdentity().getUser();
+        try {
+            return aclApi.canAccessCatalog(user, catalogName);
+        } catch (Exception e) {
+            System.err.println("[MaskQL ACL] canAccessCatalog error: " + e.getClass().getName() + ": " + e.getMessage());
+            return false;
+        }
     }
 
     @Override
-    public boolean canAccessCatalog(SystemSecurityContext context, String catalogName) {
-        String user = context.getIdentity().getUser();
-        if (policy.isAdmin(user)) return true;
-        if (policy.hasRole(user, "ANALYST") && "test_db".equalsIgnoreCase(catalogName)) return true;
-        return false;
+    public void checkCanExecuteQuery(Identity identity, QueryId queryId) {
+        return; // All User can execute query
     }
 
     // Some kind of disabled Trino access controls
